syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.kubernetesingressnginx.v1;

// KubernetesIngressNginxStackOutputs defines the outputs for the Ingress Nginx stack.
message KubernetesIngressNginxStackOutputs {
  // The namespace where the Ingress Nginx is deployed.
  string namespace = 1;
  // The name of the release, typically the Helm release name.
  string release_name = 2;
  // The name of the service created by the Ingress Nginx controller.
  string service_name = 3;
  // The type of service, e.g., "LoadBalancer", "ClusterIP", etc.
  string service_type = 4;
}
