syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesopenbao.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "org/project_planton/provider/kubernetes/kubernetes.proto";
import "org/project_planton/provider/kubernetes/target_cluster.proto";
import "org/project_planton/shared/foreignkey/v1/foreign_key.proto";
import "org/project_planton/shared/options/options.proto";

extend google.protobuf.FieldOptions {
  KubernetesOpenBaoServerContainer default_server_container = 537100;
}

/**
 * **KubernetesOpenBaoSpec** defines the configuration for deploying OpenBao on a Kubernetes cluster.
 * OpenBao is an open-source secrets management solution forked from HashiCorp Vault.
 * This specification supports standalone and high-availability (HA) deployment modes using the
 * official OpenBao Helm chart from openbao.github.io/openbao-helm.
 */
message KubernetesOpenBaoSpec {
  // Target Kubernetes Cluster
  org.project_planton.provider.kubernetes.KubernetesClusterSelector target_cluster = 1;

  // Kubernetes Namespace
  org.project_planton.shared.foreignkey.v1.StringValueOrRef namespace = 2 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = KubernetesNamespace,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "spec.name"
  ];

  // Flag to indicate if the namespace should be created.
  bool create_namespace = 3;

  // Helm chart version override.
  // Default: 0.23.3
  optional string helm_chart_version = 4 [(org.project_planton.shared.options.default) = "0.23.3"];

  // Server container specifications for the OpenBao deployment.
  KubernetesOpenBaoServerContainer server_container = 5 [(default_server_container) = {
    replicas: 1
    resources: {
      limits: {
        cpu: "500m"
        memory: "256Mi"
      }
      requests: {
        cpu: "100m"
        memory: "128Mi"
      }
    }
    data_storage_size: "10Gi"
  }];

  // High Availability configuration.
  // When enabled, OpenBao runs in HA mode with Raft integrated storage.
  KubernetesOpenBaoHighAvailability high_availability = 6;

  // Ingress configuration for external access to OpenBao.
  KubernetesOpenBaoIngress ingress = 7;

  // Enable OpenBao UI.
  // Default: true
  optional bool ui_enabled = 8 [(org.project_planton.shared.options.default) = "true"];

  // OpenBao Agent Injector configuration.
  // When enabled, deploys the injector for automatic sidecar injection.
  KubernetesOpenBaoInjector injector = 9;

  // TLS configuration.
  // Default: TLS is disabled (tlsDisable: true in Helm values).
  bool tls_enabled = 10;
}

/**
 * KubernetesOpenBaoServerContainer defines the container specifications for the OpenBao server.
 */
message KubernetesOpenBaoServerContainer {
  // Number of OpenBao server replicas.
  // For standalone mode, this is typically 1.
  // For HA mode, this should be 3 or more (odd numbers recommended for Raft consensus).
  int32 replicas = 1 [(buf.validate.field).int32 = {
    gte: 1
    lte: 10
  }];

  // CPU and memory resources allocated to the OpenBao server container.
  org.project_planton.provider.kubernetes.ContainerResources resources = 2;

  // Size of the persistent volume for OpenBao data storage.
  // Used for both standalone (file storage) and HA (Raft storage) modes.
  // Example values: "10Gi", "50Gi", "100Gi"
  // Must match Kubernetes storage size format.
  string data_storage_size = 3 [(buf.validate.field).string = {
    min_len: 1
    pattern: "^\\d+(\\.\\d+)?\\s?(Ki|Mi|Gi|Ti|Pi|Ei|K|M|G|T|P|E)$"
  }];
}

/**
 * KubernetesOpenBaoHighAvailability defines HA configuration with Raft integrated storage.
 */
message KubernetesOpenBaoHighAvailability {
  // Enable High Availability mode with Raft integrated storage.
  // When enabled, OpenBao uses Raft for both storage and leader election.
  // Requires at least 3 replicas for proper Raft consensus.
  bool enabled = 1;

  // Number of HA replicas.
  // Should be an odd number (3, 5, 7) for proper Raft consensus.
  // Default: 3
  optional int32 replicas = 2 [
    (org.project_planton.shared.options.default) = "3",
    (buf.validate.field).int32 = {
      gte: 3
      lte: 10
    }
  ];
}

/**
 * KubernetesOpenBaoIngress defines ingress configuration for OpenBao.
 */
message KubernetesOpenBaoIngress {
  // Enable ingress for external access.
  bool enabled = 1;

  // Hostname for external access (e.g., "openbao.example.com").
  // Required when ingress is enabled.
  string hostname = 2;

  // Ingress class name (e.g., "nginx", "traefik").
  // If not specified, uses the cluster default ingress class.
  string ingress_class_name = 3;

  // Enable TLS for ingress.
  // When enabled, TLS termination happens at the ingress controller.
  bool tls_enabled = 4;

  // Name of the Kubernetes secret containing TLS certificate.
  // Required when tls_enabled is true unless cert-manager annotations are used.
  string tls_secret_name = 5;

  // Hostname is required when ingress is enabled.
  option (buf.validate.message).cel = {
    id: "spec.ingress.hostname.required"
    expression: "!this.enabled || size(this.hostname) > 0"
    message: "hostname is required when ingress is enabled"
  };
}

/**
 * KubernetesOpenBaoInjector defines the Agent Injector configuration.
 * The injector enables automatic sidecar injection of OpenBao Agent containers into pods.
 */
message KubernetesOpenBaoInjector {
  // Enable the OpenBao Agent Injector.
  // When enabled, deploys a mutating webhook for automatic secret injection.
  bool enabled = 1;

  // Number of injector replicas.
  // Default: 1
  optional int32 replicas = 2 [
    (org.project_planton.shared.options.default) = "1",
    (buf.validate.field).int32 = {
      gte: 1
      lte: 5
    }
  ];
}
